src/objects/AccountInvoiceSalesSummary__c.object
<CustomObject>
    <description>Used for US account reconciliation of sales data</description>
    <fields>
        <fullName>CIM360Id__c</fullName>
        <label>CIM360Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyCode__c</fullName>
        <label>CompanyCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <label>InvoiceDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoiceKey__c</fullName>
        <description>Contains: SourceId_CompanyCode_Invoice#</description>
        <externalId>true</externalId>
        <label>InvoiceKey</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OneSFId__c</fullName>
        <label>OneSFId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <label>Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceId__c</fullName>
        <label>SourceId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceNumber__c</fullName>
        <label>invoiceNumber</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Account Invoice Sales Summary</label>
    <nameField>
        <displayFormat>TCRM-{0000000}</displayFormat>
        <label>TableauSalesDataTest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Invoice Sales Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>